examples/test/testpolicy5946.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy5946
  namespace: namespace473
spec:
  podSelector:
    matchLabels:
      key38: value33
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key18: value28
          key7: value36
      podSelector:
        matchLabels:
          key30: value35
          key9: value0
